# PatchTrap

./: .coverage  PatchTrap.py  README.md  patchtrap_mil.py  policy.json  pyproject.toml  target_app.py
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-04-27-patchtrap-investor-ready-design.md
tests/: __init__.py  conftest.py  test_cli.py  test_fingerprint.py  test_hash.py  test_patchtrap.py  test_policy.py  test_resolve.py  test_signing.py
